rest-fights/deploy/k8s/java25-openshift.yml
#######################################################################
# THIS FILE IS AUTOMATICALLY GENERATED DURING CI/CD.
# ANY LOCAL CHANGES YOU MAKE SHOULD NOT BE COMMITTED TO SOURCE CONTROL.
#######################################################################

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: fights-db
    application: fights-service
    system: quarkus-super-heroes
  name: fights-db
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    name: fights-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: fights-kafka
    application: fights-service
    system: quarkus-super-heroes
  name: fights-kafka
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    name: fights-kafka
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apicurio
    application: fights-service
    system: quarkus-super-heroes
  name: apicurio
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: apicurio
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.39.2
    app.quarkus.io/commit-id: c99d227540f2bfae4ea187b6eec8c4a2c883ec42
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-09-29 - 01:38:00 +0000
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java25-latest
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-fights
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java25-latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fights-db
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: fights-service
    app.openshift.io/runtime: mongodb
  name: fights-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fights-db
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: fights-service
        name: fights-db
        system: quarkus-super-heroes
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: fights-db-config
          image: docker.io/mongo:8
          name: fights-db
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - mountPath: /data/db
              name: fights-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: fights-initdata
      volumes:
        - emptyDir: {}
          name: fights-db-data
        - emptyDir: {}
          name: fights-initdata
        - configMap:
            name: fights-db-init
          name: fights-db-init
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fights-kafka
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: fights-service
    app.openshift.io/runtime: amq
  name: fights-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fights-kafka
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: fights-service
        name: fights-kafka
        system: quarkus-super-heroes
    spec:
      containers:
        - env:
            - name: LOG_DIR
              value: /tmp/logs
            - name: KAFKA_NODE_ID
              value: "1"
            - name: KAFKA_PROCESS_ROLES
              value: "broker,controller"
            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
              value: 1@localhost:9093
            - name: KAFKA_LISTENERS
              value: "PLAINTEXT://:9092,CONTROLLER://:9093"
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://fights-kafka:9092
            - name: KAFKA_CONTROLLER_LISTENER_NAMES
              value: CONTROLLER
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
              value: "1"
          image: apache/kafka-native:4.2.0
          name: fights-kafka
          ports:
            - containerPort: 9092
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/name: apicurio
    app.kubernetes.io/version: 2.2.3.Final
    app.openshift.io/runtime: apicurio
  name: apicurio
spec:
  replicas: 1
  selector:
    matchLabels:
      name: apicurio
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: fights-service
        name: apicurio
        system: quarkus-super-heroes
    spec:
      containers:
        - env:
            - name: REGISTRY_AUTH_ANONYMOUS_READ_ACCESS_ENABLED
              value: "true"
          image: quay.io/apicurio/apicurio-registry:3.1.7
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: apicurio
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.39.2
    app.quarkus.io/commit-id: c99d227540f2bfae4ea187b6eec8c4a2c883ec42
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-09-29 - 01:38:00 +0000
  labels:
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/version: java25-latest
    app.kubernetes.io/part-of: fights-service
  name: rest-fights
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-fights
      app.kubernetes.io/version: java25-latest
      app.kubernetes.io/part-of: fights-service
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/vcs-ref: main
        app.openshift.io/vcs-ref: main
        app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/quarkus-version: 3.39.2
        app.quarkus.io/commit-id: c99d227540f2bfae4ea187b6eec8c4a2c883ec42
        app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
        app.quarkus.io/build-timestamp: 2026-09-29 - 01:38:00 +0000
      labels:
        app: rest-fights
        application: fights-service
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: rest-fights
        app.kubernetes.io/version: java25-latest
        app.kubernetes.io/part-of: fights-service
    spec:
      containers:
        - env:
            - name: quarkus.microcks.default.grpc.host
              value: ""
            - name: quarkus.microcks.default.http.host
              value: ""
            - name: quarkus.microcks.default.grpc.port
              value: ""
            - name: quarkus.microcks.default.http.port
              value: ""
            - name: QUARKUS_OTEL_K8S_RESOURCE_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: QUARKUS_OTEL_K8S_RESOURCE_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: QUARKUS_OTEL_K8S_RESOURCE_CONTAINER_NAME
              value: rest-fights
            - name: QUARKUS_OTEL_K8S_RESOURCE_DEPLOYMENT_NAME
              value: rest-fights
          image: quay.io/quarkus-super-heroes/rest-fights:java25-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-fights
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      serviceAccountName: rest-fights
      terminationGracePeriodSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apicurio
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: apicurio
  name: apicurio
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: apicurio
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.39.2
    app.quarkus.io/commit-id: c99d227540f2bfae4ea187b6eec8c4a2c883ec42
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-09-29 - 01:38:00 +0000
    haproxy.router.openshift.io/timeout: 150s
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java25-latest
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-fights
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rest-fights
